--- a/Ansible/roles/common/templates/main.j2
+++ b/Ansible/roles/common/templates/main.j2
@@ -1,19 +1,15 @@
 {%for snmpMain, snmpType in snmp.items()%}
-
 {%if snmpType.type == 'ro' %}
 {%if snmpType.user == 'internal' %}
-snmp-server community {{ _snmpRoCommunity}} ro {{snmpType.communityAcl}}
+snmp-server community {{ snmpType.community}} ro {{snmpType.communityAcl}}
 {% elif snmpType.user == 'customer' -%}
-snmp-server community {{ _snmpRoCommunity}} ro {{snmpType.communityAcl}}
+snmp-server community {{ snmpType.community}} ro {{snmpType.communityAcl}}
 {% endif %}
-
 {%elif snmpType.type == 'rw' %}
 {%if snmpType.user == 'internal' %}
-snmp-server community {{ _snmpRoCommunity}} rw {{snmpType.communityAcl}}
+snmp-server community {{ snmpType.community}} rw {{snmpType.communityAcl}}
 {% elif snmpType.user == 'customer' -%}
-snmp-server community {{ _snmpRoCommunity}} rw {{snmpType.communityAcl}}
+snmp-server community {{ snmpType.community}} rw {{snmpType.communityAcl}}
 {% endif %}
-
 {% endif %}
-
 {% endfor %}
