--- a/Ansible/roles/common/templates/main.j2
+++ b/Ansible/roles/common/templates/main.j2
@@ -1,15 +1,4 @@
-{%for snmpMain, snmpType in snmp.items()%}
-{%if snmpType.type == 'ro' %}
-{%if snmpType.user == 'internal' %}
-snmp-server community {{ snmpType.community}} ro {{snmpType.communityAcl}}
-{% elif snmpType.user == 'customer' -%}
-snmp-server community {{ snmpType.community}} ro {{snmpType.communityAcl}}
-{% endif %}
-{%elif snmpType.type == 'rw' %}
-{%if snmpType.user == 'internal' %}
-snmp-server community {{ snmpType.community}} rw {{snmpType.communityAcl}}
-{% elif snmpType.user == 'customer' -%}
-snmp-server community {{ snmpType.community}} rw {{snmpType.communityAcl}}
-{% endif %}
-{% endif %}
-{% endfor %}
+!
+{% include 'ntp.j2' %}
+!
+{% include 'snmp.j2' %}
